Migrating to Adafruit ProTrinket 3V

--- a/Firmware/UltraLowPowerLedFlasher/platformio.ini
+++ b/Firmware/UltraLowPowerLedFlasher/platformio.ini
@@ -8,6 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env:protrinket3ftdi]
+platform = atmelavr
+board = protrinket3ftdi
+framework = arduino
+monitor_port = /dev/ttyUSB0
+monitor_speed = 9600
+
 [env:attiny13a_upload_using_avrispmkII] ;"Upload using Programmer" (don't use "Upload")
 platform = atmelavr
 board = attiny13a
