--- a/Firmware/UltraLowPowerLedFlasher/platformio.ini
+++ b/Firmware/UltraLowPowerLedFlasher/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+description = Program RTC.  Once the RTC has been programmed, the Arduino can be disconnected.
+
 [env:protrinket3ftdi]
 platform = atmelavr
 board = protrinket3ftdi
